--- a/styles.css
+++ b/styles.css
@@ -93,7 +93,7 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
     width: 100%; /* Full width */
     height: auto; /* Maintain aspect ratio */
     border-radius: 50%;
-    background-color: #ddd;
+    background-color: #000;
     display: block; /* Ensures no inline spacing */
     margin: 0 auto 10px; /* Centered logo */
   }
