--- a/styles.css
+++ b/styles.css
@@ -163,7 +163,7 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
     bottom: 40px;
     right: 20px;
     cursor: pointer;
-    background-color: rgb(118, 246, 52 / 80%);
+    background-color: #252525;
     border-radius: 50rem;
     padding: 0.5rem;
 
