--- a/styles.css
+++ b/styles.css
@@ -127,7 +127,7 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
   }
   .card-info {
     padding: 10px;
-    background-color: #3B3B3B;
+    background-color: #333333;
     font-size: 0.8em; /* Smaller font size for total players */
     color: white;
   }
