--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,17 @@
+#loading {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.8); /* Semi-transparent white background */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+
 
 
  /* Basic styling for the navigation bar */
