--- a/styles.css
+++ b/styles.css
@@ -90,41 +90,18 @@ color:white;
 
 
 
-
 /**SEARCH BOX **/
 
-.input-container {
-  position: relative;
-  width: 80%;
-  margin: 0 auto 20px;
-}
-
-.search-box {
-  border-radius: 10px;
-  padding: 10px 20px;
-  width: 100%;
-  background-color: #252525;
-  border: none;
-  color: white;
-}
-
-#clear-btn {
-  position: absolute;
-  right: 20px;
-  top: 50%;
-  transform: translateY(-50%);
-  background-color: transparent;
-  border: none;
-  color: white;
-  cursor: pointer;
-  display: none; /* Hide by default */
-}
-
-.search-box:focus + #clear-btn,
-.search-box:not(:placeholder-shown) + #clear-btn {
-  display: block; /* Show when the search box is focused or has text */
-}
-
+ .search-box {
+    border-radius: 10px;
+        padding: 10px 20px;
+        margin: 0 auto 20px;
+        width: 80%;
+        background-color: #252525;
+    /*    box-shadow: inset 1px 1px 8px 20px #251a1a; */
+        border-style: none;
+        color: white;
+  }
 
 
 
