--- a/styles.css
+++ b/styles.css
@@ -87,12 +87,7 @@ body, html {
 font-size:24px;
 color:white;
   }
-
-
-
-/**SEARCH BOX **/
-
- .search-box {
+  .search-box {
     border-radius: 10px;
         padding: 10px 20px;
         margin: 0 auto 20px;
@@ -104,7 +99,17 @@ color:white;
   }
 
 
-
+.clear-btn {
+  position: absolute;
+  right: 20px;
+  top: 50%;
+  transform: translateY(-50%);
+  background-color: transparent;
+  border: none;
+  color: white;
+  cursor: pointer;
+  display: none;
+}
 
 
 
