--- a/styles.css
+++ b/styles.css
@@ -45,7 +45,7 @@ body, html {
     padding: 0;
     scroll-behavior: smooth;
     font-family: "Vazirmatn", sans-serif;
-/*    background-color: #1E1E1E;  Dark gray background */
+    background-color: #1E1E1E;  Dark gray background 
     background-image: url('bg.svg');
     background-repeat: repeat;
 	
