--- a/styles.css
+++ b/styles.css
@@ -226,6 +226,24 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
 
 
 
+
+	  
+  /* Responsive adjustments for tablet view */
+  @media (max-width: 1024px) {
+    .card-container {
+      padding: 10px; /* Reduced padding for mobile */
+    }
+    .card {
+   /*   flex-basis: 100%;  Full width cards on mobile */
+      margin-bottom: 10px; /* Reduced space between cards */
+    }
+    .card-logo {
+      width: 120px; /* Fixed width to prevent deformation */
+      height: 120px; /* Fixed height to maintain aspect ratio */
+      object-fit: cover; /* Ensures the image doesn't get distorted */
+    }
+
+
 .card {
   position: relative; 
 }
