--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@
 
 .nav {
     width: 100%; /* Full width */
-    padding: 1rem; /* Relative padding */
+  /*  padding: 1rem;  Relative padding */
 }
 
 @media (min-width: 768px) {
