--- a/styles.css
+++ b/styles.css
@@ -156,7 +156,7 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
 
   }
   .card-logo {
-    width: 100%; /* Full width */
+ /*    width: 100%; Full width */
     height: auto; /* Maintain aspect ratio */
     border-radius: 50%;
     background-color: #3B3B3B;
