--- a/styles.css
+++ b/styles.css
@@ -246,7 +246,7 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
  	 background-image: url('icon-path.png');
  	 background-size: cover;
 }
-
+  }
 
 	 .icon {
 	 position: absolute;
