--- a/styles.css
+++ b/styles.css
@@ -248,6 +248,9 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
 }
   }
 
+
+  @media (min-width: 600px) {
+
 	 .icon {
 	 position: absolute;
  	 top: 10px;
@@ -256,7 +259,7 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
   	 height: 20px; 
  	 background-image: url('icon-path.png');
  	 background-size: cover;
-
+	 }
 
     
     
