--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@ ul.nav {
     display: flex;
     list-style: none;
     color: white;
-/*  margin-bottom: 30px;   */
+ margin-bottom: 30px;   
     justify-content: center;
     align-items: center;
 }
