--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@
             bottom: 0;
             left: 0;
             width: 100%;
-            background-color: darkgray;
+            background-color: #1d1d1d;
             padding: 10px; /* Adjust as needed */
         }
 
@@ -49,7 +49,7 @@ ul.nav {
     display: flex;
     list-style: none;
     color: white;
- margin-bottom: 30px;   
+/*  margin-bottom: 30px;   */
     justify-content: center;
     align-items: center;
 }
