--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@
             bottom: 0;
             left: 0;
             width: 100%;
-            background-color: #1d1d1d;
+            background-color: #1a1a1a;
             padding: 10px; /* Adjust as needed */
 	   z-index: 9998; /* Higher value to ensure it's on top */
 
