--- a/styles.css
+++ b/styles.css
@@ -66,7 +66,7 @@ ul.nav {
         }
         li.nav-item.active {
 
-    margin-bottom: -4px;
+  /*  margin-bottom: -4px;  */
     font-weight: bold;
     background: #333333;
     border-radius: 1rem;
