--- a/styles.css
+++ b/styles.css
@@ -27,62 +27,48 @@
 
 
 
-
-
-        .nav {
+ .navbar {
+            display: flex;
+            justify-content: space-evenly;
+            align-items: center;
             position: fixed;
-            bottom: 0;
-            left: 0;
-            width: 100%;
-            background-color: #1a1a1a;
-            padding: 10px; /* Adjust as needed */
-	   z-index: 9998; /* Higher value to ensure it's on top */
-	   border-top: 1px solid #434223;
-
+            bottom: 10%;
+            width: 85%;
+            left: 7.5%;
+            background-color: rgba(0, 0, 0, 0.8);
+            border-radius: 50px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            backdrop-filter: blur(10px);
         }
-
         .nav-item {
-            display: block;
-            /* Add any other styling you need for the buttons */
+            
+            text-align: center;
+            padding: 10px;
+            color: #fff;
+            transition: transform 0.2s ease;
+            cursor: pointer;
+        }
+        .nav-item.active {
+            border-top: 3px solid #ffd700; /* Smaller line */
+color:gold;
+font-weight: 700;
+transition: 0.3s;
+
+        }
+        .nav-item:not(.active):hover {
+            background-color: rgba(255, 255, 255, 0.1);
+        }
+        .nav-icon {
+            font-size: 24px;
+            margin-bottom: 5px;
+        }
+        .nav-text {
+            font-size: 14px;
         }
 
 
 
 
- /* Basic styling for the navigation bar */
-ul.nav {
-    display: flex;
-    list-style: none;
-    color: white;
- margin-bottom: 50px;  
-    justify-content: center;
-    align-items: center;
-}
-
-        li.nav-item {
-		 
-         margin-right: 42px; 
-            border-bottom: 2px solid transparent;
-            font-family: sans-serif; /* Sans-serif font */
-            transition: border-color 0.3s; /* Smooth animation */
-		transition: 0.3s;
-		
-
-		
-        }
-        li.nav-item.active {
-
-  /*  margin-bottom: -4px;  */
-    font-weight: bold;
-    background: #333333;
-    border-radius: 1rem;
-    padding: 0.8rem;
- border-bottom-color: gold;
-
-transition: background 0.3s;
-
-		
-        }
 
 
 
