--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,7 @@
 
 
  .navbar {
+	      z-index: 9998; /* Higher value to ensure it's on top */
             display: flex;
             justify-content: space-evenly;
             align-items: center;
