--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,7 @@
             bottom: 5%;
             width: 85%;
             left: 7.5%;
-            background-color: rgba(0, 0, 0, 0.8);
+	    background-color: rgb(33 33 33 / 80%);
             border-radius: 50px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             backdrop-filter: blur(10px);
