--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,16 @@
-  .verify {
+  /* Remove the default appearance of the clear button */
+  input[type="search"]::-webkit-search-cancel-button {
+    -webkit-appearance: none;
+    appearance: none;
+    height: 10px;
+    width: 10px;
+    background-image: url('cancel.svg'); /* Replace with your image URL */
+    background-size: cover; /* Adjust as needed */
+  }
+
+
+
+.verify {
     position: absolute;
     top: 0;
     right: 0;
