--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
     height: 10px;
     width: 10px;
     background-image: url('cancel.svg'); /* Replace with your image URL */
-    background-size: cover; /* Adjust as needed */
+    background-size: 10px; /* Adjust as needed */
   }
 
 
