--- a/styles.css
+++ b/styles.css
@@ -62,10 +62,14 @@ transition: 0.3s;
         .nav-item:not(.active):hover {
             background-color: rgba(255, 255, 255, 0.2);
         }
+
+/*
         .nav-icon {
             font-size: 24px;
             margin-bottom: 5px;
         }
+
+*/
         .nav-text {
             font-size: 14px;
         }
