--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,12 @@
-
+.gradient-div {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 20vh;
+    background: linear-gradient(to top, rgb(18 18 18), white);
+    z-index: 1;
+}
 
 
 .verify {
