--- a/styles.css
+++ b/styles.css
@@ -5,8 +5,16 @@
     width: 100%;
     height: 20vh;
     background: linear-gradient(to top, rgb(18 18 18), white);
-    z-index: 1;
+    z-index: 9995;
 }
+
+
+.copyright{
+
+    z-index: 9996;
+}
+
+
 
 
 .verify {
@@ -262,7 +270,7 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
     padding-left: 0.8rem;
     padding-top: 0.7rem;
     padding-bottom: 0.3rem;
-
+    z-index: 9997;
   }
 
   /* Responsive adjustments for mobile view */
