--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,8 @@
     left: 0;
     width: 100%;
     height: 20vh;
-    background: linear-gradient(to top, rgb(18 18 18), white);
+    background: linear-gradient(to top, rgb(18 18 18), #ffffff00);
+
     z-index: 9995;
 }
 
