--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,12 @@
+/* Disable Selecting */
+.prevent-select {
+    -webkit-user-select: none; /* Safari */
+    -ms-user-select: none; /* IE 10 and IE 11 */
+    user-select: none; /* Standard syntax */
+}
+
+
+
 .gradient-div {
     position: fixed;
     bottom: 0;
