--- a/styles.css
+++ b/styles.css
@@ -222,8 +222,8 @@ color:white;
     padding: 10px;
     text-align: center; /* Centered card name */
 color: white;
-background-color: #3B3B3B;
-background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' viewBox='0 0 100 100'%3E%3Crect x='0' y='0' width='46' height='46' fill-opacity='0.02' fill='%23000000'/%3E%3C/svg%3E");
+background-color: #33333380;
+/* background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' viewBox='0 0 100 100'%3E%3Crect x='0' y='0' width='46' height='46' fill-opacity='0.02' fill='%23000000'/%3E%3C/svg%3E");  */
 
 
   }
