--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,8 @@
 .responsive-image {
     width: 100%;
     height: auto;
+    display: block;
+    margin: 0 auto; /* This centers the image horizontally */
 }
 
 
