--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@
     height: auto;
     display: block;
     margin: 0 auto; /* This centers the image horizontally */
+	padding-top: 40px;
 }
 
 
@@ -160,7 +161,7 @@ body, html {
   }
   .description {
     text-align: center;
-    padding: 50px 20px 0; /* Reduced top padding */
+ /*   padding: 50px 20px 0;  Reduced top padding */
     color: #fff; /* Description text color changed to white */
     position: relative; /* Ensure it's visible under the header */
  /*   padding-top: 80px;  Add space for the fixed header */
