--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 .responsive-image {
-    width: 60%;
+    width: 400px;
     height: auto;
     display: block;
     margin: 0 auto; /* This centers the image horizontally */
