--- a/styles.css
+++ b/styles.css
@@ -141,6 +141,7 @@
             border-radius: 50px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             backdrop-filter: blur(10px);
+	 border: 1px solid #313131;
         }
         .nav-item {
             
