--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-
+f
 
 
 .card-container {
@@ -84,7 +84,7 @@
     bottom: 0;
     left: 0;
     width: 100%;
-    height: 20vh;
+    height: 40vh;
     background: linear-gradient(to top, rgb(18 18 18), #ffffff00);
 
     z-index: 9995;
