--- a/styles.css
+++ b/styles.css
@@ -144,7 +144,7 @@
             left: 7.5%;
 	    background-color: rgb(33 33 33 / 80%);
             border-radius: 50px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+box-shadow: 0px 20px 20px 0px rgb(0 0 0 / 39%);
             backdrop-filter: blur(10px);
 	 border: 1px solid #313131;
         }
