--- a/styles.css
+++ b/styles.css
@@ -332,6 +332,8 @@ color:white;
     padding-top: 0.7rem;
     padding-bottom: 0.3rem;
     z-index: 9997;
+
+	  box-shadow: 0px 20px 20px 0px rgb(0 0 0 / 39%);
   }
 
   /* Responsive adjustments for mobile view */
