--- a/styles.css
+++ b/styles.css
@@ -162,6 +162,7 @@ box-shadow: 0px 20px 20px 0px rgb(0 0 0 / 39%);
 color:gold;
 font-weight: 700;
 transition: 0.3s;
+		    background: linear-gradient(0deg, rgba(2, 0, 36, 0) 0%, rgb(255 252 0 / 9%) 100%);
 
         }
         .nav-item:not(.active):hover {
