--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,16 @@
+.live {
+	width=20px;
+}
+
+.active-section {
+    display: flex;
+    /* flex-direction: row; */
+    align-content: stretch;
+    align-content: flex-end;
+    /* justify-content: flex-start; */
+    align-items: center;
+
+}
 
 
 .card-container {
