--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 .live {
-	width: 20px;
+	width: 24px;
 }
 
 .active-section {
@@ -8,7 +8,7 @@
     align-content: stretch;
     align-content: flex-end;
     /* justify-content: flex-start; */
-    align-items: center;
+	align-items: flex-end;
 
 }
 
