--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+
 .live {
 	width: 24px;
 }
@@ -251,6 +252,7 @@ body, html {
  /*    height: 80px; */
   }
   .description {
+	      line-height: 2rem;
 	  padding-bottom: 1rem;
 	  font-size: 14px;
     text-align: center;
