--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,38 @@
+h1 {
+    color: #fff;
+    font-size: 1rem;
+    font-weight: 600;
+}
+
+h1 span {
+    color: gold;
+    position: relative;
+}
+
+h1 span::before {
+    content: "";
+    height: 20px;
+    width: 2px;
+    position: absolute;
+    top: 50%;
+    right: -8px;
+    background: gold;
+    transform: translateY(-45%);
+    animation: blink 0.7s infinite;
+}
+
+h1 span.stop-blinking::before {
+    animation: none;
+}
+
+@keyframes blink {
+    50% { opacity: 0 }
+}
+
+
+
+
+
 
 .live {
 	width: 24px;
