--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,12 @@
+/* Importing Google font - Inter */
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
+
 h1 {
+	    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Inter", sans-serif;
+	
 	text-align: center;
     color: #fff;
     font-size: 1.5rem;
