--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,13 @@
 /* Importing Google font - Inter */
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
 
+
+        #scriptContainer {
+            opacity: 0;
+            transition: opacity 0.5s ease; /* Adjust the duration as needed */
+        }
+
+
 h1 {
 
     padding: 0;
