--- a/styles.css
+++ b/styles.css
@@ -2,10 +2,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
 
 
-        #scriptContainer {
-            opacity: 0;
-            transition: opacity 0.5s ease; /* Adjust the duration as needed */
-        }
+.theme {
+	display: block;
+    margin: 0 auto;
+    padding-top: 40px;
+}
+
 
 
 h1 {
