--- a/styles.css
+++ b/styles.css
@@ -3,9 +3,11 @@
 
 
 .theme {
-	display: block;
+    /* display: block; */
     margin: 0 auto;
-    padding-top: 40px;
+    padding-top: 60px;
+    margin: 5px;
+    position: absolute;
 }
 
 
