--- a/light.css
+++ b/light.css
@@ -1,6 +1,12 @@
 /* Importing Google font - Inter */
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
 
+
+.copyright {
+	color:gray;
+}
+
+
 .theme {
     /* display: block; */
     margin: 0 auto;
