--- a/light.css
+++ b/light.css
@@ -131,7 +131,7 @@ h1 span.stop-blinking::before {
 
 .card-info {
   padding: 10px;
-  background-color: #e7e7e7;
+  background-color: #f2f2f2;
   font-size: 0.8em; /* Smaller font size for total players */
   color: 1c1c1c;
   position: relative; /* Add this */
