--- a/light.css
+++ b/light.css
@@ -413,7 +413,7 @@ background-color: #89b0d7f7;
     padding-bottom: 0.3rem;
     z-index: 9997;
 
-	  box-shadow: 0px 9px 20px 0px rgb(0 0 0 / 20%)
+    box-shadow: 0px 9px 20px 0px rgb(106 175 250 / 39%);
   }
 
   /* Responsive adjustments for mobile view */
