--- a/styles.css
+++ b/styles.css
@@ -209,6 +209,7 @@ h1 span.stop-blinking::before {
 
 
  .navbar {
+	 border-top: 4px solid transparent;
 	      z-index: 9998; /* Higher value to ensure it's on top */
             display: flex;
             justify-content: space-evenly;
@@ -224,7 +225,7 @@ box-shadow: 0px 20px 20px 0px rgb(0 0 0 / 39%);
 	 border: 1px solid #313131;
         }
         .nav-item {
-            
+            border-top: 4px solid transparent;
             text-align: center;
             padding: 10px;
             color: #fff;
