--- a/light.css
+++ b/light.css
@@ -210,6 +210,7 @@ background: linear-gradient(to top, rgb(0 0 0 / 42%), #ffffff00);
 
 
  .navbar {
+	 border-top: 4px solid transparent;
 	      z-index: 9998; /* Higher value to ensure it's on top */
             display: flex;
             justify-content: space-evenly;
@@ -225,7 +226,7 @@ box-shadow: 0px 20px 20px 0px rgb(107 107 107 / 39%);
     border: 1px solid #ebebeb;
         }
         .nav-item {
-            
+            border-top: 4px solid transparent;
             text-align: center;
             padding: 10px;
             color: #1c1c1c;
