--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,10 @@
 /* Importing Google font - Inter */
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
 
+input:focus {
+    outline: none;
+}
+
 .copyright {
 	color:white;
 }
