--- a/light.css
+++ b/light.css
@@ -2,6 +2,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
 input:focus {
     outline: none;
+	border: 1px solid #e27c00;
+    background: #fffdfb;
 }
 
 .copyright {
